--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                             <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg" alt="VALORANT">
                         </a>
                     </li>
+
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Counter-Strike%3A%20Global%20Offensive">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-188x250.jpg" alt="CSGO">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
