--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div>
-            <img src="https://avatars.githubusercontent.com/u/84207944?v=4" alt="">
+            <img src="https://media-exp1.licdn.com/dms/image/D4D03AQHws7FinmXZgA/profile-displayphoto-shrink_200_200/0/1666048811265?e=1672272000&v=beta&t=6kUOmaUXBuIOiEhwdUNJWtBJZAS0z1z4xhKvRW4TKgA" alt="">
         </div>
     </header>
 
